--- a/circle.yml
+++ b/circle.yml
@@ -5,11 +5,11 @@ machine:
   post:
     - gvm install go1.4.2 --name=stable --binary
     - gvm use stable --default
+    - go get github.com/laher/goxc && goxc -bc="linux,darwin" -arch="amd64" -t
 
 dependencies:
   pre:
     - go get github.com/tools/godep
-    - go get github.com/laher/goxc && goxc -bc="linux,darwin" -arch="amd64" -t
   override:
     - godep restore
     - gvm linkthis github.com/taik/go-adx-parser
@@ -18,4 +18,6 @@ test:
   override:
     - godep go test -v ./...
   post:
-    - goxc -d=$CIRCLE_ARTIFACTS
+    - goxc -d=$CIRCLE_ARTIFACTS:
+        pwd:
+          ~/.gvm/pkgsets/stable/global/src/github.com/taik/go-adx-parser/
