--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ machine:
     - bash < <(curl -s -S -L https://raw.githubusercontent.com/moovweb/gvm/master/binscripts/gvm-installer)
     - source /home/ubuntu/.gvm/scripts/gvm
   post:
-    - gvm install go1.4.2 --name=stable --binary
+    - gvm install go1.4.2 --name=stable --binary --with-protobuf --with-build-tools
     - gvm use stable --default
     - go get github.com/laher/goxc && goxc -bc="linux,darwin" -arch="amd64" -t
 
@@ -18,6 +18,5 @@ test:
   override:
     - godep go test -v ./...
   post:
-    - goxc -d=$CIRCLE_ARTIFACTS:
-        pwd:
-          ~/.gvm/pkgsets/stable/global/src/github.com/taik/go-adx-parser/
+    - goxc -d=$CIRCLE_ARTIFACTS -bc="linux,darwin" -arch="amd64":
+        pwd: /home/ubuntu/.gvm/pkgsets/stable/global/src/github.com/taik/go-adx-parser/
