--- a/circle.yml
+++ b/circle.yml
@@ -5,8 +5,12 @@ machine:
   post:
     - gvm install go1.4.2 --name=stable --binary --with-protobuf --with-build-tools
     - gvm use stable --default
+    # Gox -- cross-compile
     - go get github.com/mitchellh/gox
     - gox -build-toolchain -os="linux darwin" -arch="amd64" -cgo
+    # gh-release
+    - curl -L https://github.com/progrium/gh-release/releases/download/v2.2.0/gh-release_2.2.0_linux_x86_64.tgz | tar -xz
+    - chmod +x gh-release && sudo mv gh-release /usr/local/bin/
 
 dependencies:
   pre:
@@ -20,4 +24,7 @@ test:
     - godep go test -v ./...
   post:
     - gox -os="linux darwin" -arch="amd64"
-    - mv go-adx-parser_* $CIRCLE_ARTIFACTS/
+    - mkdir $CIRCLE_ARTIFACTS/release
+    - mv go-adx-parser_* $CIRCLE_ARTIFACTS/release/
+    - gh-release create taik/go-adx-parser $CIRCLE_BUILD_NUM:
+        pwd: $CIRCLE_ARTIFACTS
