--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 dependencies:
   pre:
-    - rm -rf /home/ubuntu/.go_workspace/src/github.com/taik/go-adx-parser
+    - rm -rf /home/ubuntu/.go_workspace/src/github.com/taik/
     - make deps
   override:
     - godep restore
